13. Dynamic Blocks/using List/main.tf
variable "ingress_rules" {
    type = list(number)
    default = [25, 80, 443, 8080, 8443]
}

variable "egress_rules" {
    type = list(number)
    default = [443, 8443]
}



data "aws_vpc" "main" {
    default = true
}

resource "aws_instance" "myec2db" {
  ami = "ami-00399ec92321828f5"
  instance_type = "t2.micro"
  security_groups = [aws_security_group.main.name]

  tags = {
    "Name" = "Web Server"
  }
}

resource "aws_security_group" "main"{
    name = "tuts-sg"
    vpc_id = data.aws_vpc.main.id

    dynamic "ingress" {
      iterator = port
      for_each = var.ingress_rules
      content  {
          from_port = port.value
          to_port = port.value
          protocol = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
      }
    }

    dynamic "egress" {
      iterator = port
      for_each = var.egress_rules
      content  {
          from_port = port.value
          to_port = port.value
          protocol = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
      }
    }

    /*
    ingress =  {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "Port_443"
      from_port = 443
      protocol = "tcp"
      to_port = 443
    } 

    ingress = {
      cidr_blocks = [ "0.0.0.0/0" ]
      description = "Port_80"
      from_port = 80
      protocol = "tcp"
      to_port = 80
    } 
    */
    tags = {
      "Name" = "tuts security group.."
    }

}
